--- a/DiandianIOS/DiandianIOS/DABillDetailViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DABillDetailViewCell.xib
@@ -30,12 +30,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="金额" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FzI-QY-cF8">
-                                <rect key="frame" x="542" y="11" width="171" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="数量" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DvJ-gT-WlS">
                                 <rect key="frame" x="390" y="11" width="83" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -49,6 +43,12 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TNl-tY-Uuq">
+                                <rect key="frame" x="497" y="7" width="149" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -58,7 +58,6 @@
                 <outlet property="btnOperation" destination="V4S-jc-uhO" id="cIs-ta-VxD"/>
                 <outlet property="lblAmount" destination="DvJ-gT-WlS" id="OAj-g4-Rcb"/>
                 <outlet property="lblName" destination="tVB-gn-XYw" id="Tbu-NA-ErI"/>
-                <outlet property="lblPay" destination="FzI-QY-cF8" id="iSd-TP-SgJ"/>
                 <outlet property="lblPrice" destination="ens-Ep-aN9" id="vRB-J5-sbm"/>
             </connections>
         </tableViewCell>
