--- a/DiandianIOS/DiandianIOS/DAMyTableViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewController.xib
@@ -66,13 +66,13 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="101" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="of4-rF-Kgv">
-                            <rect key="frame" x="123" y="7" width="72" height="30"/>
+                            <rect key="frame" x="123" y="8" width="72" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="退菜" backgroundImage="top_bg3.png">
+                            <state key="normal" title="更新菜单" backgroundImage="top_bg3.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="socketTouched:" destination="-1" eventType="touchUpInside" id="zyw-r9-dVG"/>
+                                <action selector="testUpdateMenuListTouched:" destination="-1" eventType="touchUpInside" id="zFE-hH-XWH"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="201" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rsf-FB-EL7">
